# DM-Sim

./: .qcor_plugin.yml  CMakeLists.txt  LICENSE  README.md
artifact/: SLI.txt  Summit.txt  dgx-1P.txt  dgx-1V.txt  dgx-2.txt
benchmark/: pea3pi8_n5.qasm  qec_n5.qasm  w_state_n3.qasm
example/: CMakeLists.txt  Makefile  adder_n10_amdgpu_mpi.cpp  adder_n10_amdgpu_omp.cpp  adder_n10_cpu_mpi.cpp  adder_n10_cpu_omp.cpp  adder_n10_mpi.py  adder_n10_nvgpu_mpi.cu  adder_n10_nvgpu_omp.cu  adder_n10_omp.py
qasmbench/: CMakeLists.txt  README.md
qasmbench/small/dnn_n2/: dnn_n2.cpp
qir/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  qir_mpi_wrapper.cu  qir_omp_wrapper.cu  vqe.ll  vqe.py  vqe_mpi_driver.cc  vqe_omp_driver.cc
src/: Makefile  Makefile_sample  adder_n10_cpu_mpi.cpp  adder_n10_cpu_omp.cpp  adder_n10_mpi.cu  adder_n10_mpi.py  adder_n10_nvgpu_mpi.cu  adder_n10_nvgpu_omp.cu  adder_n10_omp.cu  adder_n10_omp.py  circuit.cuh  config.hpp  config.mk  configuration.h  configuration_sample.h  dmsim_amdgpu_mpi.hpp  dmsim_amdgpu_omp.hpp  dmsim_cpu_mpi.hpp  dmsim_cpu_omp.hpp  dmsim_gen_cir.py  dmsim_mpi.cu  dmsim_nvgpu_mpi.cuh  dmsim_nvgpu_omp.cuh  dmsim_omp.cu  dmsim_run_benchmark.py  dmsim_run_test.py  dmsim_sin.cu  gate.cuh  gate_mpi.cuh  gate_omp.cuh  py_amdgpu_mpi_wrapper.cpp  py_amdgpu_omp_wrapper.cpp  py_cpu_mpi_wrapper.cpp  py_cpu_omp_wrapper.cpp  py_mpi_wrapper.cu  py_nvgpu_mpi_wrapper.cu  py_nvgpu_omp_wrapper.cu  py_omp_wrapper.cu  qir_mpi_wrapper.cpp  qir_mpi_wrapper.cu  (+11 more)
summit/: set_env.sh  summit_dmsim.lsf
tool/: dmsim_qasm.py  dmsim_qasm_ass.py  dmsim_qasm_cplus.py  dmsim_run_benchmark.py  dmsim_run_test.py  randomtest_n14.py  run_dmsim_qasm.sh  vqe_uccsd_n8.py
xacc/: CMakeLists.txt  DmSimAccelerator.cpp  DmSimAccelerator.hpp  DmSimApi.hpp  README.md  manifest.json
xacc/cpu_omp/: CMakeLists.txt  dm_sim_omp_runner.cpp
xacc/nvidia_omp/: CMakeLists.txt  NvidiaOmpRunner.cu
xacc/nvidia_omp/tests/: CMakeLists.txt  DmSimAcceleratorMultipleGpusTester.cpp  DmSimAcceleratorTester.cpp
xacc/tests/: CMakeLists.txt  DmSimCpuAcceleratorTester.cpp
