CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT(DMSim)

IF(USE_NVGPU)
    IF (USE_OPENMP)
        FILE(GLOB_RECURSE EXAMPLE_SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*_nvgpu_omp.cu")
    ENDIF()
    IF (USE_MPI)
        FILE(GLOB_RECURSE EXAMPLE_SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*_nvgpu_mpi.cu")
    ENDIF()
ELSE()
    IF (USE_OPENMP)
        FILE(GLOB_RECURSE EXAMPLE_SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*_cpu_omp.cpp")
    ENDIF()
    IF (USE_MPI)
        FILE(GLOB_RECURSE EXAMPLE_SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*_cpu_mpi.cpp")
    ENDIF()
ENDIF()

FOREACH(EXAMPLE_SRC IN LISTS EXAMPLE_SRCS)
    GET_FILENAME_COMPONENT(EXAMPLE_EXE "${EXAMPLE_SRC}" NAME_WE)
    IF(USE_NVGPU)
        #CUDA_ADD_EXECUTABLE("${EXAMPLE_EXE}" "${EXAMPLE_SRC}")
        ADD_EXECUTABLE("${EXAMPLE_EXE}" "${EXAMPLE_SRC}")
    ELSE()
        ADD_EXECUTABLE("${EXAMPLE_EXE}" "${EXAMPLE_SRC}")
    ENDIF()
    
    #IF(USE_OPENMP)
    #TARGET_LINK_LIBRARIES("${EXAMPLE_EXE}" PUBLIC OpenMP::OpenMP_CXX)
    #ENDIF()

    IF(USE_MPI)
        TARGET_LINK_LIBRARIES("${EXAMPLE_EXE}" ${MPI_LIBRARIES})
    ENDIF()
ENDFOREACH(EXAMPLE_SRC)

