FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
# Define NVIDIA GPU Arch
# TODO: auto detect this
# SM70 == Summit GPU
SET(CUDA_ARCH_BIN 70)
SET(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -gencode arch=compute_${CUDA_ARCH_BIN},code=sm_${CUDA_ARCH_BIN} -rdc=true --compiler-options -fPIC")
SET(CUDA_VERBOSE_BUILD ON)
SET(CUDA_SEPARABLE_COMPILATION ON)
SET(LIBRARY_NAME xacc-dm-sim-nvidia-omp)
FILE(GLOB SRC *.cu)
cuda_add_library(${LIBRARY_NAME} SHARED ${SRC})
include_directories(${CMAKE_SOURCE_DIR}/xacc/utils .. ../..)
cuda_include_directories(.. ../..)
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${CUDA_LIBRARIES} OpenMP::OpenMP_CXX)
SET_TARGET_PROPERTIES("${LIBRARY_NAME}" PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
SET_PROPERTY(TARGET "${LIBRARY_NAME}"  PROPERTY CUDA_STANDARD 17)
install(TARGETS ${LIBRARY_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/../lib)

if(XACC_BUILD_TESTS)
    add_subdirectory(tests)
endif()